# 3d-entity-manager

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LOD_BILLBOARD_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  VISUAL_SUMMARY.md
examples/: IntegrationExample.cpp  PerformanceTestExample.cpp
include/: AttitudeUtils.h  DdsDataSimulator.h  EntityManager.h  LodConfig.h  MissileModel.h  PerformanceTestManager.h  ShipModel.h  object3d.h  sensorvolume.h  trackline.h
resource/images/: README.md  create_billboards.py
resource/osgEarth/: trackline_pulse.frag  trackline_pulse.vert
src/: DdsDataSimulator.cpp  EntityManager.cpp  MissileModel.cpp  PerformanceTestManager.cpp  ShipModel.cpp  object3d.cpp  sensorvolume.cpp  trackline.cpp
